scrollbar fix

--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,6 @@ html, body {
     width: 40%;
 }
 #features {
-    overflow-y: scroll;
     width: 59%;
     margin-left: 40.5%;
     margin-right: 0.5%;
@@ -182,6 +181,15 @@ section:last-child {
 .grid-item img {
   display: block;
   max-width: 100%;
+}
+img {
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    pointer-events: none;
 }
   
 
